# algo_practice

./: .gitignore  CMakeLists.txt  README.md
binary_tree/: CMakeLists.txt
binary_tree/src/: main.cpp
include/: binary_tree.h  hello.h  node.h
singly_linked_list/: CMakeLists.txt  singly_linked_list.cpp
singly_linked_list/include/: node.h  singly_linked.h
singly_linked_list/src/: main.cpp  singly_linked.cpp
src/: binary_tree.cpp  hello.cpp  main.cpp
